results/logs/gpu_36884.err
/user/7/dialloh/gpu_comp_hmm_regime/src/cpu/algo_hmm_cpu.cpp: In function ‘void hmm::cpu::algo::compute_gamma(const float*, const float*, float*, int, int)’:
/user/7/dialloh/gpu_comp_hmm_regime/src/cpu/algo_hmm_cpu.cpp:145:15: warning: ISO C++ forbids variable length array ‘log_gamma’ [-Wvla]
  145 |         float log_gamma[N];
      |               ^~~~~~~~~
/user/7/dialloh/gpu_comp_hmm_regime/src/cpu/algo_hmm_cpu.cpp: In function ‘void hmm::cpu::algo::compute_xi(const float*, const float*, const float*, float*, int, int)’:
/user/7/dialloh/gpu_comp_hmm_regime/src/cpu/algo_hmm_cpu.cpp:165:15: warning: ISO C++ forbids variable length array ‘log_xi’ [-Wvla]
  165 |         float log_xi[N * N];
      |               ^~~~~~
/user/7/dialloh/gpu_comp_hmm_regime/src/cpu/algo_hmm_cpu.cpp: In function ‘void hmm::cpu::algo::initialize_random(HMMModel&, unsigned int)’:
/user/7/dialloh/gpu_comp_hmm_regime/src/cpu/algo_hmm_cpu.cpp:394:54: warning: unused parameter ‘seed’ [-Wunused-parameter]
  394 | void initialize_random(HMMModel& model, unsigned int seed) {
      |                                         ~~~~~~~~~~~~~^~~~
/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/viterbi_kernels.cu(35): warning #177-D: variable "pot_idx" was declared but never referenced
          int pot_idx = N + (t - 1) * N * N;
              ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/forward_backward_kernels.cu: In function ‘void hmm::gpu::detail::forward_backward_parallel_gpu(const float*, float*, float*, int, int)’:
/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/forward_backward_kernels.cu:334:1: warning: unused parameter ‘d_beta’ [-Wunused-parameter]
  333 |     float* d_alpha,
      |          ~~~~~~~~~~
  334 |     float* d_beta,
      | ^   ~~
/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/forward_backward_kernels.cu: In function ‘void hmm::gpu::detail::backward_algorithm_gpu_launch(const float*, float*, int, int)’:
/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/forward_backward_kernels.cu:426:1: warning: unused parameter ‘d_log_potentials’ [-Wunused-parameter]
  425 | void backward_algorithm_gpu_launch(
      |                                    
  426 |     const float* d_log_potentials,
      | ^   ~~~~~~~~~~~~
/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/forward_backward_kernels.cu:427:1: warning: unused parameter ‘d_beta’ [-Wunused-parameter]
  426 |     const float* d_log_potentials,
      |                   ~~~~~~~~~~~~~~~~
  427 |     float* d_beta,
      | ^   ~~
/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/forward_backward_kernels.cu:428:1: warning: unused parameter ‘T’ [-Wunused-parameter]
  427 |     float* d_beta,
      |         ~~~~~~~~~~
  428 |     int T,
      | ^
/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/forward_backward_kernels.cu:429:1: warning: unused parameter ‘N’ [-Wunused-parameter]
  428 |     int T,
      |     ~~~~~~
  429 |     int N
      | ^
/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/forward_backward_kernels.cu: In function ‘void hmm::gpu::detail::compute_xi_gpu_launch(const float*, const float*, const float*, float*, int, int)’:
/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/forward_backward_kernels.cu:481:1: warning: unused parameter ‘d_log_potentials’ [-Wunused-parameter]
  480 | void compute_xi_gpu_launch(
      |                            
  481 |     const float* d_log_potentials,
      | ^   ~~~~~~~~~~~~
/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/forward_backward_kernels.cu:482:1: warning: unused parameter ‘d_alpha’ [-Wunused-parameter]
  481 |     const float* d_log_potentials,
      |                   ~~~~~~~~~~~~~~~~
  482 |     const float* d_alpha,
      | ^   ~~~
/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/forward_backward_kernels.cu:483:1: warning: unused parameter ‘d_beta’ [-Wunused-parameter]
  482 |     const float* d_alpha,
      |          ~~~~~~~~~~~~~~~~
  483 |     const float* d_beta,
      | ^   ~~
/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/forward_backward_kernels.cu:484:1: warning: unused parameter ‘d_xi’ [-Wunused-parameter]
  483 |     const float* d_beta,
      |         ~~~~~~~~~~~~~~~~
  484 |     float* d_xi,
      | ^   
/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/forward_backward_kernels.cu:485:1: warning: unused parameter ‘T’ [-Wunused-parameter]
  484 |     float* d_xi,
      |       ~~~~~~~~~~
  485 |     int T,
      | ^
/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/forward_backward_kernels.cu:486:1: warning: unused parameter ‘N’ [-Wunused-parameter]
  485 |     int T,
      |     ~~~~~~
  486 |     int N
      | ^
/user/7/dialloh/gpu_comp_hmm_regime/test/cuda/test_forward_backward_gpu.cu(75): error: name followed by "::" must be a class or namespace name
      auto t0 = chrono::high_resolution_clock::now();
                ^

/user/7/dialloh/gpu_comp_hmm_regime/test/cuda/test_forward_backward_gpu.cu(79): error: name followed by "::" must be a class or namespace name
      auto t1 = chrono::high_resolution_clock::now();
                ^

/user/7/dialloh/gpu_comp_hmm_regime/test/cuda/test_forward_backward_gpu.cu(80): error: name followed by "::" must be a class or namespace name
      float cpu_ms = chrono::duration<float, milli>(t1 - t0).count();
                     ^

/user/7/dialloh/gpu_comp_hmm_regime/test/cuda/test_forward_backward_gpu.cu(80): error: expected an identifier
      float cpu_ms = chrono::duration<float, milli>(t1 - t0).count();
                                      ^

/user/7/dialloh/gpu_comp_hmm_regime/test/cuda/test_forward_backward_gpu.cu(80): error: expected a ";"
      float cpu_ms = chrono::duration<float, milli>(t1 - t0).count();
                                      ^

/user/7/dialloh/gpu_comp_hmm_regime/test/cuda/test_forward_backward_gpu.cu(141): error: name followed by "::" must be a class or namespace name
      auto t0 = chrono::high_resolution_clock::now();
                ^

/user/7/dialloh/gpu_comp_hmm_regime/test/cuda/test_forward_backward_gpu.cu(145): error: name followed by "::" must be a class or namespace name
      auto t1 = chrono::high_resolution_clock::now();
                ^

/user/7/dialloh/gpu_comp_hmm_regime/test/cuda/test_forward_backward_gpu.cu(146): error: name followed by "::" must be a class or namespace name
      float cpu_ms = chrono::duration<float, milli>(t1 - t0).count();
                     ^

/user/7/dialloh/gpu_comp_hmm_regime/test/cuda/test_forward_backward_gpu.cu(146): error: expected an identifier
      float cpu_ms = chrono::duration<float, milli>(t1 - t0).count();
                                      ^

/user/7/dialloh/gpu_comp_hmm_regime/test/cuda/test_forward_backward_gpu.cu(146): error: expected a ";"
      float cpu_ms = chrono::duration<float, milli>(t1 - t0).count();
                                      ^

/user/7/dialloh/gpu_comp_hmm_regime/test/cuda/test_forward_backward_gpu.cu(213): error: name followed by "::" must be a class or namespace name
          auto t0 = chrono::high_resolution_clock::now();
                    ^

/user/7/dialloh/gpu_comp_hmm_regime/test/cuda/test_forward_backward_gpu.cu(215): error: name followed by "::" must be a class or namespace name
          auto t1 = chrono::high_resolution_clock::now();
                    ^

/user/7/dialloh/gpu_comp_hmm_regime/test/cuda/test_forward_backward_gpu.cu(216): error: name followed by "::" must be a class or namespace name
          float cpu_ms = chrono::duration<float, milli>(t1 - t0).count();
                         ^

/user/7/dialloh/gpu_comp_hmm_regime/test/cuda/test_forward_backward_gpu.cu(216): error: expected an identifier
          float cpu_ms = chrono::duration<float, milli>(t1 - t0).count();
                                          ^

/user/7/dialloh/gpu_comp_hmm_regime/test/cuda/test_forward_backward_gpu.cu(216): error: expected a ";"
          float cpu_ms = chrono::duration<float, milli>(t1 - t0).count();
                                          ^

15 errors detected in the compilation of "/user/7/dialloh/gpu_comp_hmm_regime/test/cuda/test_forward_backward_gpu.cu".
make[2]: *** [test/CMakeFiles/test_forward_backward_gpu.dir/build.make:77: test/CMakeFiles/test_forward_backward_gpu.dir/cuda/test_forward_backward_gpu.cu.o] Error 2
make[1]: *** [CMakeFiles/Makefile2:338: test/CMakeFiles/test_forward_backward_gpu.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:146: all] Error 2
